MGS-4874 fix image alignment issue on partner logos

--- a/scss/components/_component.article-header.scss
+++ b/scss/components/_component.article-header.scss
@@ -33,6 +33,7 @@
     display: inline-block;
     max-height: 133px;
     padding-left: 25%;
+    vertical-align: bottom;
   }
 }
 
